test/lambda/negative/semantic/binary_odd_hex.ls
// @negative
// @description: binary hex payloads must contain complete byte pairs
b'\xDEA'
